--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^1.7.4",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.3",
     "core-js": "^3.8.3",
+    "cors": "^2.8.5",
     "register-service-worker": "^1.7.2",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
