--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.3",
     "core-js": "^3.8.3",
+    "jspdf": "^2.5.1",
     "url": "^0.11.4",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
