--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
   "dependencies": {
     "axios": "^1.7.4",
     "bootstrap": "^5.3.3",
-    "chart.js": "^4.4.3",
+    "chart.js": "^4.4.4",
     "core-js": "^3.8.3",
     "cors": "^2.8.5",
     "register-service-worker": "^1.7.2",
     "vue": "^3.2.13",
+    "vue-chartjs": "^5.3.1",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
   },
