--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "register-service-worker": "^1.7.2",
     "vue": "^3.2.13",
+    "vue-chart.js": "^0.2.0",
     "vue-chartjs": "^5.3.1",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
