--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "chart.js": "^4.4.3",
     "core-js": "^3.8.3",
     "cors": "^2.8.5",
+    "jspdf": "^2.5.1",
     "register-service-worker": "^1.7.2",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
