--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jspdf": "^2.5.1",
     "url": "^0.11.4",
     "vue": "^3.2.13",
+    "vue-chartjs": "^5.3.1",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0",
     "webpack": "^5.93.0",
