--- a/package.json
+++ b/package.json
@@ -7,13 +7,19 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "assert": "^2.1.0",
+    "axios": "^1.7.4",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.3",
     "core-js": "^3.8.3",
-    "register-service-worker": "^1.7.2",
+    "jspdf": "^2.5.1",
+    "url": "^0.11.4",
     "vue": "^3.2.13",
+    "vue-chartjs": "^5.3.1",
     "vue-router": "^4.0.3",
-    "vuex": "^4.0.0"
+    "vuex": "^4.0.0",
+    "webpack": "^5.93.0",
+    "webpack-cli": "^5.1.4"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~5.0.0",
