--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.3",
     "core-js": "^3.8.3",
+    "firebase": "^10.14.0",
+    "firebase-tools": "^13.20.2",
     "jspdf": "^2.5.1",
     "url": "^0.11.4",
     "vue": "^3.2.13",
